--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="green">#00ff00</color>
+    <color name="black">#000000</color>
 
     <color name="sayable_blue">#1bbde2</color>
     <color name="non_sayable_blue">#2e86d0</color>
