--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="green">#4CAF50</color>
     <color name="black">#000000</color>
 
+    <color name="grey_brown">#A49494</color>
     <color name="sayable_blue">#1bbde2</color>
     <color name="non_sayable_blue">#2e86d0</color>
 
