--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,7 +32,7 @@
         <item name="android:layout_height">100dp</item>
         <item name="android:padding">10dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:inputType">textMultiLine</item>
+        <item name="android:maxLines">2</item>
     </style>
 
 
