--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,24 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
+    <ImageView
+        android:id="@+id/btn_exit0"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_baseline_close"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:paddingBottom="58dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_exit">
@@ -43,12 +56,12 @@
             tools:text="TextView" />
 
         <TextView
-            android:text="suggestion"
             android:id="@+id/suggestion4"
             style="@style/suggestionStyle"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
+            android:text="suggestion"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent"
@@ -109,9 +122,9 @@
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
-        android:background="@color/grey_brown_light"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/grey_brown_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -160,8 +173,14 @@
             style="@style/indicationStyle"
             android:text="@string/dialog_flow"
             app:layout_constraintBottom_toBottomOf="@+id/pepperTxt"
-            app:layout_constraintStart_toEndOf="@+id/pepperTxt"
-             />
+            app:layout_constraintStart_toEndOf="@+id/pepperTxt" />
+
+        <android.support.constraint.Group
+            android:id="@+id/robotViewGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="imageView2,line,dialogFlow,qiChatBot,pepperTxt" />
 
 
     </android.support.constraint.ConstraintLayout>
