--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,17 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="sayable_blue">#1bbde2</color>
+    <color name="non_sayable_blue">#2e86d0</color>
+
+    <color name="selected_green">#4caf50</color>
+    <color name="pressed_green">#1b5e20</color>
+
+    <color name="gray">#888888</color>
+    <color name="light_gray">#cccccccc</color>
+    <color name="selected_category_gray">#fafafa</color>
+    <color name="unselected_category_gray">#e0e0e0</color>
+    <color name="close_gray">#f5f5f5</color>
+    <color name="disabled_text_gray">#9e9e9e</color>
 </resources>
