--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_exit">
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/suggestion4"
             style="@style/suggestionStyle"
             android:layout_marginBottom="16dp"
@@ -55,7 +55,7 @@
             app:layout_constraintTop_toBottomOf="@+id/suggestion2"
             tools:text="TextView" />
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/suggestion3"
             style="@style/suggestionStyle"
             android:layout_marginEnd="8dp"
@@ -91,7 +91,7 @@
             app:layout_constraintTop_toBottomOf="@+id/suggestion2"
             tools:text="TextView" />
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/suggestion2"
             style="@style/suggestionStyle"
             android:layout_marginEnd="8dp"
@@ -151,7 +151,7 @@
             app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/pepperTxt"
             style="@style/pepperTalkStyle"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
@@ -178,6 +178,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
+            tools:visibility="visible"
             app:constraint_referenced_ids="imageView2,line,dialogFlow,qiChatBot,pepperTxt" />
 
 
