--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,8 @@
         <item name="android:tint">@color/button_text_color_selector</item>
     </style>
     <style name="suggestionStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="autoSizeTextType">uniform</item>
         <item name="android:textSize">20sp</item>
         <item name="android:background">@drawable/suggestion_background</item>
         <item name="android:layout_width">350dp</item>
@@ -26,6 +28,7 @@
     </style>
 
     <style name="pepperTalkStyle">
+        <item name="autoSizeTextType">uniform</item>
         <item name="android:textSize">30sp</item>
         <item name="android:background">@drawable/peper_talk_background</item>
         <item name="android:layout_width">550dp</item>
@@ -40,7 +43,7 @@
         <item name="android:textSize">15sp</item>
         <item name="android:background">@drawable/idle_button_background</item>
         <item name="android:layout_width">100dp</item>
-        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_height">40dp</item>
         <item name="android:padding">10dp</item>
         <item name="android:gravity">center</item>
         <item name="android:inputType">textMultiLine</item>
