--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
         <item name="android:layout_height">60dp</item>
         <item name="android:padding">10dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:inputType">textMultiLine</item>
+        <item name="android:inputType">textMultiLine|textNoSuggestions</item>
     </style>
 
     <style name="pepperTalkStyle">
@@ -46,7 +46,7 @@
         <item name="android:layout_height">40dp</item>
         <item name="android:padding">10dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:inputType">textMultiLine</item>
+        <item name="android:inputType">textMultiLine|textNoSuggestions</item>
     </style>
 
 
