--- a/app/src/main/res/drawable/green_top_right_rounded_background.xml
+++ b/app/src/main/res/drawable/green_top_right_rounded_background.xml
@@ -2,13 +2,18 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#fff" />
+    <solid android:color="@color/green" />
 
     <corners
         android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="10dp"
+        android:bottomRightRadius="0dp"
         android:topLeftRadius="0dp"
         android:topRightRadius="10dp" />
 
+    <stroke
+        android:width="1dp"
+        android:color="@color/black"
+        android:dashGap="5px"
+        android:dashWidth="10px" />
 
 </shape>
