--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,10 +40,9 @@
 
 
     <style name="indicationStyle">
-        <item name="android:textSize">15sp</item>
-        <item name="android:background">@drawable/idle_button_background</item>
-        <item name="android:layout_width">100dp</item>
-        <item name="android:layout_height">40dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">10dp</item>
         <item name="android:gravity">center</item>
         <item name="android:inputType">textMultiLine|textNoSuggestions</item>
