--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,21 +16,23 @@
         <item name="android:tint">@color/button_text_color_selector</item>
     </style>
     <style name="suggestionStyle">
+        <item name="android:fontFamily">"@fonts/open_sans_bold"</item>
         <item name="android:textColor">@color/black</item>
         <item name="autoSizeTextType">uniform</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:layout_width">350dp</item>
-        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_width">400dp</item>
+        <item name="android:layout_height">70dp</item>
         <item name="android:padding">10dp</item>
         <item name="android:gravity">center</item>
         <item name="android:inputType">textMultiLine|textNoSuggestions</item>
     </style>
 
     <style name="pepperTalkStyle">
+        <item name="android:textColor">@color/black</item>
         <item name="autoSizeTextType">uniform</item>
         <item name="android:textSize">30sp</item>
         <item name="android:background">@drawable/peper_talk_background</item>
-        <item name="android:layout_width">550dp</item>
+        <item name="android:layout_width">800dp</item>
         <item name="android:layout_height">100dp</item>
         <item name="android:padding">10dp</item>
         <item name="android:gravity">center</item>
