--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#F48FB1</color>
     <color name="green">#4CAF50</color>
-    <color name="black">#000000</color>
+    <color name="black">#212121</color>
 
     <color name="grey_brown">#A49494</color>
     <color name="grey_brown_light">#BCB0B0</color>
@@ -21,6 +21,10 @@
     <color name="close_gray">#f5f5f5</color>
     <color name="disabled_text_gray">#9e9e9e</color>
     <color name="white">#fff</color>
-    <color name="bubble_color">#EFEBE9</color>
+
+
+    <color name="white_1">#eeeeee</color>
+    <color name="warm_grey">#757575</color>
+
 
 </resources>
